--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Telegram: Join Group Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:title" content="DVJ IPL Special 🏆">
+    <meta property="og:title" content="Tiger Dubai IPL Special 🏆">
 
     <script>
         window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches && document.documentElement && document.documentElement.classList && document.documentElement.classList.add('theme_dark');
@@ -22,30 +22,7 @@
     <link href="lander/lendoptim2_1710840442/Telegram_%20Join%20Group%20Chat_files/bootstrap.min.css" rel="stylesheet">
     <link href="lander/lendoptim2_1710840442/Telegram_%20Join%20Group%20Chat_files/telegram.css" rel="stylesheet" media="screen">
     <link href="lander/lendoptim2_1710840442/Telegram_%20Join%20Group%20Chat_files/custom.css" rel="stylesheet">
-    <script>
-        ! function(f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function() {
-                n.callMethod ?
-                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = '2.0';
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s)
-        }(window, document, 'script',
-            'https://connect.facebook.net/en_US/fbevents.js');
-        var queryParams = new URLSearchParams(window.location.search);
-        var customParam = queryParams.get('pixelid');
-        fbq('init', customParam);
-        fbq('track', 'PageView');
-    </script>
+    
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-9BSJMMRNRF"></script>
