--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
     <link href="lander/lendoptim2_1710840442/Telegram_%20Join%20Group%20Chat_files/bootstrap.min.css" rel="stylesheet">
     <link href="lander/lendoptim2_1710840442/Telegram_%20Join%20Group%20Chat_files/telegram.css" rel="stylesheet" media="screen">
     <link href="lander/lendoptim2_1710840442/Telegram_%20Join%20Group%20Chat_files/custom.css" rel="stylesheet">
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '371965562224928');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=371965562224928&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
     
 </head>
 <!-- Google tag (gtag.js) -->
