--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Telegram: Join Group Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="og:title" content="Tiger Dubai IPL Special 🏆">
+    <meta property="og:title" content="Tiger DXB World cup Special 🏆">
 
     <script>
         window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches && document.documentElement && document.documentElement.classList && document.documentElement.classList.add('theme_dark');
@@ -86,18 +86,18 @@ src="https://www.facebook.com/tr?id=371965562224928&ev=PageView&noscript=1"
                     <a href="https://t.me/TigerrDxb"><img class="tgme_page_photo_image" src="https://raw.githubusercontent.com/katiyaraman6684/Tiger-Dubai/main/_d44d7c68-d0f7-4099-9f38-2de92d786d5e.jfif.jpg"></a>
                 </div>
                 <div class="tgme_page_title" dir="auto">
-                    <span dir="auto">TIGER DUBAI IPL Special 🏆 </span>
+                    <span dir="auto"Tiger DXB World cup Special 🏆 </span>
                 </div>
                 <div class="tgme_page_extra">40000 subscribers</div>
                 <div class="tgme_page_description" dir="auto">15+ YEAR EXPERIENCE ON THIS MARKET 💯💰 💸
-                    <br><br>✌️100% FREE TIPS BY TIGER DUBAI</div>
+                    <br><br>✌️100% FREE TIPS BY TIGER DXB</div>
                 <p class="available">spots left: <span id="count">100</span></p>
                 <div class="tgme_page_action">
                     <a onclick="fbq('track', 'Lead')" class="tgme_action_button_new" href="https://t.me/TigerrDxb">Join Channel</a>
                 </div>
                 <!-- WEBOGRAM_BTN -->
                 <div class="tgme_page_additional">
-                    You are invited to the channel <strong dir="auto">Tiger Dubai IPL Special 🏆. Click above to join.
+                    You are invited to the channel <strong dir="auto">Tiger DXB World cup Special 🏆. Click above to join.
 </strong></div><strong dir="auto">
         </strong></div><strong dir="auto">
         
