--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ src="https://www.facebook.com/tr?id=371965562224928&ev=PageView&noscript=1"
                     <a href="https://t.me/TigerrDxb"><img class="tgme_page_photo_image" src="https://raw.githubusercontent.com/katiyaraman6684/Tiger-Dubai/main/_d44d7c68-d0f7-4099-9f38-2de92d786d5e.jfif.jpg"></a>
                 </div>
                 <div class="tgme_page_title" dir="auto">
-                    <span dir="auto"Tiger DXB World cup Special 🏆 </span>
+                    <span dir="auto">Tiger DXB World cup Special🏆 </span>
                 </div>
                 <div class="tgme_page_extra">40000 subscribers</div>
                 <div class="tgme_page_description" dir="auto">15+ YEAR EXPERIENCE ON THIS MARKET 💯💰 💸
